--- a/menu.html
+++ b/menu.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content=eial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content=eial-scale=1.0 ">
+	<meta http-equiv=" X-UA-Compatible " content=" ie=edge ">
+	<link rel=" stylesheet " href=" https://www.w3schools.com/w3css/4/w3.css ">
+	<link rel=" stylesheet " href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css ">
+	<link rel=" stylesheet " href=" style.css ">
 	<title>Restaurace Pilská Hospoda</title>
 </head>
 
 <body>
-	<div class="w3-container w3-center" id="logo">
-		<img src="logo.png" class="w3-mobile" alt="" height="150px">
+	<div class=" w3-container w3-center " id=" logo ">
+		<img src=" logo.png " class=" w3-mobile " alt=" " height=" 150px ">
 	</div>
-	<div class="w3-container w3-cell-row w3-center w3-red" id="menu">
-		<a href="./index.html" class="w3-cell w3-button w3-mobile w3-hover-white">Domů</a>
-		<a href="./menu.html" class="w3-cell w3-button w3-mobile active">Menu</a>
-		<a href="./kontakt.html" class="w3-cell w3-button w3-mobile w3-hover-white">Kontakt</a>
+	<div class=" w3-container w3-cell-row w3-center w3-red " id=" menu ">
+		<a href=" ./index.html " class=" w3-cell w3-button w3-mobile w3-hover-white ">Domů</a>
+		<a href=" ./menu.html " class=" w3-cell w3-button w3-mobile active ">Menu</a>
+		<a href=" ./kontakt.html " class=" w3-cell w3-button w3-mobile w3-hover-white ">Kontakt</a>
 	</div>
-	<div class="w3-row w3-center w3-mobile" id="content" style="padding:2vh; width:unset">
-		<div class="w3-half w3-mobile">
+	<div class=" w3-row w3-center w3-mobile " id=" content " style=" padding:2vh; width:unset ">
+		<div class=" w3-half w3-mobile ">
 			<h3>Jídelní lístek</h3>
-			<div id="jidelni-listek" class="w3-container w3-row">
-				<table class="w3-left w3-half w3-mobile">
+			<div id=" jidelni-listek " class=" w3-container w3-row ">
+				<table class=" w3-left w3-half w3-mobile ">
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">K pivu</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Předkrmy</td>
 					</tr>
 					<tr>
 						<td>Utopenec, pečivo</td>
@@ -41,6 +41,9 @@
 						<td>55,-&nbsp;Kč</td>
 					</tr>
 					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">K pivu</td>
+					</tr>
+					<tr>
 						<td>Chipsy</td>
 						<td>35,-&nbsp;Kč</td>
 					</tr>
@@ -53,14 +56,17 @@
 						<td>35,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Polévky</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Polévky</td>
 					</tr>
 					<tr>
 						<td>Dle denní nabídky</td>
 						<td>35,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Jídla</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Jídla</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Vepřové maso</td>
 					</tr>
 					<tr>
 						<td>Smažený vepřový řízek</td>
@@ -68,11 +74,18 @@
 					</tr>
 					<tr>
 						<td>Vepřová játra na cibulce</td>
-						<td>85,-&nbsp;Kč</td>
+						<td>90,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Vepřový steak na žampionech</td>
 						<td>120,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Medailonky z vepřové panenky se zelenými fazolkami a slaninou</td>
+						<td>175,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Kuřecí maso</td>
 					</tr>
 					<tr>
 						<td>Smažený kuřecí řízek</td>
@@ -83,6 +96,24 @@
 						<td>120,-&nbsp;Kč</td>
 					</tr>
 					<tr>
+						<td>Kuřecí steak s rajčetem a sýrem</td>
+						<td>140,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Speciality</td>
+					</tr>
+					<tr>
+						<td>Halušky, zelí, uzené maso</td>
+						<td>115,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Bezmasá jídla</td>
+					</tr>
+					<tr>
+						<td>Smažený květák</td>
+						<td>90,-&nbsp;Kč</td>
+					</tr>
+					<tr>
 						<td>Smažený sýr</td>
 						<td>90,-&nbsp;Kč</td>
 					</tr>
@@ -91,28 +122,39 @@
 						<td>90,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Saláty</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Ryby</td>
+					</tr>
+					<tr>
+						<td>Smažené rybí file se sýrem</td>
+						<td>90,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Smažené rybí file se špenátem</td>
+						<td>90,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Saláty</td>
 					</tr>
 					<tr>
 						<td>Salát s kuřecím masem, toast</td>
-						<td>95,-&nbsp;Kč</td>
+						<td>110,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Salát s mozzarellou, toast</td>
-						<td>85,-&nbsp;Kč</td>
+						<td>90,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Salát s balkánským sýrem, toast</td>
-						<td>85,-&nbsp;Kč</td>
+						<td>90,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Salát s tuňákem, toast</td>
-						<td>90,-&nbsp;Kč</td>
+						<td>100,-&nbsp;Kč</td>
 					</tr>
 				</table>
-				<table class="w3-right w3-half w3-mobile">
+				<table class=" w3-right w3-half w3-mobile ">
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Přílohy</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Přílohy</td>
 					</tr>
 					<tr>
 						<td>Hranolky</td>
@@ -124,10 +166,6 @@
 					</tr>
 					<tr>
 						<td>Americké brambory</td>
-						<td>30,-&nbsp;Kč</td>
-					</tr>
-					<tr>
-						<td>Bramborové lupínky</td>
 						<td>35,-&nbsp;Kč</td>
 					</tr>
 					<tr>
@@ -147,121 +185,181 @@
 						<td>10,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Dezerty</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Dezerty</td>
 					</tr>
 					<tr>
-						<td>Palačinka, džem, šlehačka, lesní ovoce</td>
-						<td>49,-&nbsp;Kč</td>
+						<td>Belgická wafle, šlehačka, lesní ovoce</td>
+						<td>65,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>Palačinka, džem, šlehačka, zmrzlina</td>
-						<td>45,-&nbsp;Kč</td>
+						<td>Belgická wafle, šlehačka, zmrzlina</td>
+						<td>60,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>Dortík dle nabídky</td>
+						<td>Štrůdl, šlehačka</td>
 						<td>40,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Zmrzlinové poháry</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Zmrzlinové poháry</td>
 					</tr>
 					<tr>
 						<td>Zmrzlina mix, šlehačka</td>
-						<td>40,-&nbsp;Kč</td>
+						<td>45,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Zmrzlina mix, lesní ovoce, šlehačka</td>
-						<td>55,-&nbsp;Kč</td>
+						<td>65,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>Horké maliny</td>
-						<td>50,-&nbsp;Kč</td>
+						<td>Zmrzlina mix, tropické ovoce, šlehačka</td>
+						<td>65,-&nbsp;Kč</td>
 					</tr>
-					<tr style="height:1em"></tr>
 					<tr>
-						<td colspan="2" style="text-align: center">Menu box 5,-&nbsp;Kč</td>
+						<td>Horké maliny, šlehačka</td>
+						<td>60,-&nbsp;Kč</td>
+					</tr>
+					<tr style=" height:1em "></tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center ">Menu box 5,-&nbsp;Kč</td>
 					</tr>
 				</table>
 			</div>
 		</div>
-		<div class="w3-half w3-mobile">
+		<div class=" w3-half w3-mobile ">
 			<h3>Nápojový lístek</h3>
-			<div id="napojovy-listek" class="w3-container w3-row">
-				<div class="w3-left w3-half w3-mobile">
-					<table class="w3-mobile" style="width: 100%">
+			<div id=" napojovy-listek " class=" w3-container w3-row ">
+				<div class=" w3-left w3-half w3-mobile ">
+					<table class=" w3-mobile " style=" width: 100% ">
 						<tr>
-							<td colspan="2" style="text-align: center; font-weight: bold">Destiláty&nbsp;0,04&nbsp;l
+							<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Destiláty&nbsp;0,04&nbsp;l
 							</td>
 						</tr>
 						<tr>
 							<td>Becherovka</td>
-							<td>32,-&nbsp;Kč </td>
-						</tr>
-						<tr>
-							<td>Becherovka nefiltr.</td>
 							<td>35,-&nbsp;Kč </td>
 						</tr>
 						<tr>
+							<td>Becherovka Lemon</td>
+							<td>35,-&nbsp;Kč </td>
+						</tr>
+						<tr>
+							<td>Becherovka Unfiltered</td>
+							<td>40,-&nbsp;Kč </td>
+						</tr>
+						<tr>
 							<td>Fernet Stock</td>
+							<td>35,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Fernet Citrus</td>
+							<td>35,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Rum Božkov Originál</td>
 							<td>30,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Fernet citrus</td>
+							<td>Rum Božkov Kávový</td>
 							<td>30,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Rum Božkov</td>
-							<td>28,-&nbsp;Kč</td>
+							<td>Rum Božkov Mandlový</td>
+							<td>30,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Rum Republica</td>
-							<td>45,-&nbsp;Kč</td>
-						</tr>
-						<tr>
-							<td>Jägermeister</td>
 							<td>50,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Slivovice</td>
+							<td>Jägermeister</td>
+							<td>55,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Slivovice Jelínek</td>
+							<td>50,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Moravská Švestka</td>
 							<td>35,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Tullamore Dew</td>
-							<td>50,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Johnnie Walker Red</td>
-							<td>50,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Jim Beam</td>
-							<td>50,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Jack Daniels</td>
-							<td>60,-&nbsp;Kč</td>
+							<td>80,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Beefeater Gin</td>
-							<td>48,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Baileys</td>
-							<td>45,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Tequila</td>
-							<td>50,-&nbsp;Kč</td>
+							<td>Tequila „Pepe Lopéz“</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Finská vodka</td>
-							<td>32,-&nbsp;Kč</td>
+							<td>40,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Vodka Božkov</td>
+							<td>30,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Metaxa 5*</td>
-							<td>50,-&nbsp;Kč</td>
+							<td>65,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td colspan="2" style="text-align: center; font-weight: bold">Vína</td>
+							<td>Myslivec Reserve</td>
+							<td>40,-&nbsp;Kč</td>
+						</tr>
+<tr>
+	<td>Griotka</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Jablko Božkov</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Borovička</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Hruška</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Meruňka</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Vaječňák</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Zelená</td>
+	<td>30,-&nbsp;Kč</td>
+</tr>
+<tr>
+	<td>Polar Jahoda</td>
+	<td>35,-&nbsp;Kč</td>
+</tr>
+						<tr>
+							<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Vína</td>
 						</tr>
 						<tr>
 							<td>Lambrusco červ. 0,75 l</td>
@@ -273,22 +371,26 @@
 						</tr>
 						<tr>
 							<td>Bohemia Sekt 0,75 l</td>
-							<td>190,-&nbsp;Kč</td>
+							<td>220,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Bohemia Sekt Piccolo 0,375 l</td>
+							<td>110,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Červené víno 0,2 l</td>
-							<td>25,-&nbsp;Kč</td>
+							<td>30,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Bílé víno 0,2 l</td>
-							<td>25,-&nbsp;Kč</td>
+							<td>30,-&nbsp;Kč</td>
 						</tr>
 					</table>
-					<table class="w3-mobile" id="pivo" style="width: 100%">
+					<table class=" w3-mobile " id=" pivo " style=" width: 100% ">
 						<tr>
-							<td style="text-align: center; font-weight: bold">Pivo</td>
-							<td style="text-align: center; font-weight: bold">0,5&nbsp;l</td>
-							<td style="text-align: center; font-weight: bold">0,33&nbsp;l</td>
+							<td style=" text-align: center; font-weight: bold ">Pivo</td>
+							<td style=" text-align: center; font-weight: bold ">0,5&nbsp;l</td>
+							<td style=" text-align: center; font-weight: bold ">0,33&nbsp;l</td>
 						</tr>
 						<tr>
 							<td>Budvar 10°</td>
@@ -297,36 +399,41 @@
 						</tr>
 						<tr>
 							<td>Budvar 11°</td>
-							<td>28,-&nbsp;Kč</td>
-							<td>17,-&nbsp;Kč</td>
+							<td>30,-&nbsp;Kč</td>
+							<td>18,-&nbsp;Kč</td>
 						</tr>
 						<tr>
 							<td>Budvar 12°</td>
-							<td>33,-&nbsp;Kč</td>
-							<td>20,-&nbsp;Kč</td>
+							<td>35,-&nbsp;Kč</td>
+							<td>21,-&nbsp;Kč</td>
 						</tr>
 						<tr>
-							<td>Nealko Budvar</td>
+							<td>Radler/td>
 							<td>25,-&nbsp;Kč</td>
+							<td>15,-&nbsp;Kč</td>
+						</tr>
+						<tr>
+							<td>Nealko Budvar - lahvový</td>
+							<td>30,-&nbsp;Kč</td>
 							<td></td>
 						</tr>
 					</table>
 				</div>
 
-				<table class="w3-right w3-half w3-mobile">
+				<table class=" w3-right w3-half w3-mobile ">
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Nealko</td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Nealko</td>
 					</tr>
 					<tr>
-						<td>Mattoni 0,33 l</td>
+						<td>Mattoni</td>
 						<td>20,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>Pepsi 0,25 l</td>
+						<td>Pepsi</td>
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Pepsi bez cukru 0,25 l</td>
+						<td>Pepsi Max (bez cukru)</td>
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
@@ -346,7 +453,7 @@
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Mattoni Margarita</td>
+						<td>Džus hruška 0,25l</td>
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
@@ -366,55 +473,86 @@
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Red Bull</td>
-						<td>50,-&nbsp;Kč </td>
+						<td>Točená limonáda 0,5 l</td>
+						<td>30,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Točená malinovka 0,5 l</td>
+						<td>Točená limonáda 0,3 l</td>
+						<td>18,-&nbsp;Kč </td>
+					</tr>
+					<tr>
+						<td>Kohoutková voda 0,5 l</td>
 						<td>25,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Točená malinovka 0,3 l</td>
+						<td>Kohoutková voda 0,3 l</td>
 						<td>15,-&nbsp;Kč </td>
 					</tr>
 					<tr>
-						<td>Kohoutková voda 0,3 l</td>
-						<td>10,-&nbsp;Kč </td>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Káva</td>
 					</tr>
 					<tr>
-						<td>Čaj Greenfield</td>
-						<td>28,-&nbsp;Kč </td>
+						<td>Espresso</td>
+						<td>30,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>Grog</td>
-						<td>32,-&nbsp;Kč </td>
+						<td>Espresso&nbsp;Lungo</td>
+						<td>30,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td colspan="2" style="text-align: center; font-weight: bold">Káva</td>
+						<td>Espresso&nbsp;Con&nbsp;Panna</td>
+						<td>40,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>ESPRESSO</td>
-						<td>26,-&nbsp;Kč</td>
+						<td>Espresso&nbsp;Macchiato</td>
+						<td>35,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>CAPPUCCINO</td>
-						<td>28,-&nbsp;Kč</td>
+						<td>Cappuccino</td>
+						<td>38,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>LATTE</td>
+						<td>Latte&nbsp;Macchiato</td>
 						<td>32,-&nbsp;Kč</td>
 					</tr>
 					<tr>
-						<td>CON&nbsp;PANNA</td>
-						<td>32,-&nbsp;Kč</td>
+						<td>Turecká káva</td>
+						<td>25,-&nbsp;Kč</td>
 					</tr>
 					<tr>
 						<td>Ledová káva</td>
-						<td>39,-&nbsp;Kč</td>
+						<td>45,-&nbsp;Kč</td>
 					</tr>
-					<tr style="height:1em"></tr>
+					<tr style=" height:1em "></tr>
 					<tr>
-						<td colspan="2" style="text-align: center">Kelímek na kávu 5,-&nbsp;Kč</td>
+						<td colspan=" 2 " style=" text-align: center ">Kelímek na kávu 5,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td colspan=" 2 " style=" text-align: center; font-weight: bold ">Čaj Greenfield</td>
+					</tr>
+					<tr>
+						<td>Černý</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Zelený</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Ovocný</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Heřmánkový</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Mátový</td>
+						<td>35,-&nbsp;Kč</td>
+					</tr>
+					<tr>
+						<td>Grog</td>
+						<td>40,-&nbsp;Kč</td>
 					</tr>
 				</table>
 			</div>
