--- a/kontakt.html
+++ b/kontakt.html
@@ -2,52 +2,51 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="style.css">
-	<title>Restaurace Pilská Hospoda</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Restaurace Pilská Hospoda</title>
 </head>
 
 <body>
-	<div class="w3-container w3-center" id="logo">
-		<img src="logo.png" class="w3-mobile" alt="" height="150px">
-	</div>
-	<div class="w3-container w3-cell-row w3-center w3-red" id="menu">
-		<a href="./index.html" class="w3-cell w3-button w3-mobile w3-hover-white">Domů</a>
-		<a href="./menu.html" class="w3-cell w3-button w3-mobile w3-hover-white">Menu</a>
-		<a href="./kontakt.html" class="w3-cell w3-button w3-mobile active">Kontakt</a>
-	</div>
-	<div class="w3-row w3-center w3-mobile" id="content" style="width: unset !important">
-		<div class="w3-third w3-mobile">
-			<h3>Kde nás najdete</h3>
-			<h5 style="font-weight:600;">Pila 99</h5>
-			<h6>360 01 Pila</h6>
-			<iframe id="map" width="100%" height="350vh" frameborder="0" style="border:0"
-				src="https://www.google.com/maps/embed/v1/place?q=%20Pila%2099%20360%2001%20Pila&key=AIzaSyBuLXTCg5ic805kEhDZb-Y1BeS_d41Qs2w"
-				allowfullscreen></iframe>
-		</div>
+    <div class="w3-container w3-center" id="logo">
+        <img src="logo.png" class="w3-mobile" alt="" height="150px">
+    </div>
+    <div class="w3-container w3-cell-row w3-center w3-red" id="menu">
+        <a href="./index.html" class="w3-cell w3-button w3-mobile w3-hover-white">Domů</a>
+        <a href=" ./jidelni_listek.html " class=" w3-cell w3-button w3-mobile w3-hover-white ">Jídelní lístek</a>
+        <a href=" ./napojovy_listek.html " class=" w3-cell w3-button w3-mobile w3-hover-white ">Nápojový lístek</a>
+        <a href="./kontakt.html" class="w3-cell w3-button w3-mobile active">Kontakt</a>
+    </div>
+    <div class="w3-row w3-center w3-mobile" id="content" style="width: unset !important">
+        <div class="w3-third w3-mobile">
+            <h3>Kde nás najdete</h3>
+            <h5 style="font-weight:600;">Pila 99</h5>
+            <h6>360 01 Pila</h6>
+            <iframe id="map" width="100%" height="350vh" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=%20Pila%2099%20360%2001%20Pila&key=AIzaSyBuLXTCg5ic805kEhDZb-Y1BeS_d41Qs2w" allowfullscreen></iframe>
+        </div>
 
-		<div class="w3-third w3-mobile">
-			<h3>Otevírací doba</h3>
-			<ul class="w3-ul">
-				<li>PO: Zavřeno</li>
-				<li>ÚT: 11:30 - 22:00</li>
-				<li>ST: 11:30 - 22:00</li>
-				<li>ČT: 11:30 - 22:00</li>
-				<li>PÁ: 11:30 - 22:00</li>
-				<li>SO: 11:30 - 22:00</li>
-				<li>NE: 11:30 - 22:00</li>
-			</ul>
-		</div>
-		<div class="w3-third w3-mobile">
-			<h3>Provozovatel</h3>
-			<p>PAVEL MATĚJKA</p>
-			<p>IČ: 72257270</p>
-			<p>Tel.: 777 949 911</p>
-		</div>
-	</div>
+        <div class="w3-third w3-mobile">
+            <h3>Otevírací doba</h3>
+            <ul class="w3-ul">
+                <li>PO: Zavřeno</li>
+                <li>ÚT: 11:30 - 22:00</li>
+                <li>ST: 11:30 - 22:00</li>
+                <li>ČT: 11:30 - 22:00</li>
+                <li>PÁ: 11:30 - 22:00</li>
+                <li>SO: 11:30 - 22:00</li>
+                <li>NE: 11:30 - 22:00</li>
+            </ul>
+        </div>
+        <div class="w3-third w3-mobile">
+            <h3>Provozovatel</h3>
+            <p>PAVEL MATĚJKA</p>
+            <p>IČ: 72257270</p>
+            <p>Tel.: 777 949 911</p>
+        </div>
+    </div>
 </body>
 
 </html>
